--- a/github-battle/package.json
+++ b/github-battle/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "query-string": "^6.4.2",
     "react-router-dom": "^5.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
